--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/Axel-Duval/ProjetWeb#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15"
   }
 }
