--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/Axel-Duval/ProjetWeb#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-sanitizer": "^1.0.5",
     "jsdoc": "^3.6.3",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mysql": "^2.18.1"
   }
 }
