--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdoc": "^3.6.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1"
   }
 }
